# build-profiler

./: README.md  pyproject.toml
build_profiler/: __init__.py  cli.py  output.py  profiler.py
tests/: test_output.py
