[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-profiler"
version = "0.1.0"
description = "Profile Next.js/Vite build times per module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takawasi" }
]
keywords = ["nextjs", "vite", "webpack", "profiler", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
build-profiler = "build_profiler.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/build-profiler"
Repository = "https://github.com/takawasi/build-profiler"

[tool.hatch.build.targets.wheel]
packages = ["build_profiler"]
